tests/tests/errors/2006-31.vb
'#compiler-options:-win32icon:
'#compiler-message:Command line error BC2006 : option 'win32icon' requires ':<file>'
'#exit-code:1